<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections_button">UPCOMING ELECTIONS</string>
    <string name="find_my_representatives_button">FIND MY REPRESENTATIVES</string>
    <string name="elections_logo">elections logo</string>
    <string name="upcoming_elections_header">Upcoming Elections</string>
    <string name="saved_elections_header">Saved Elections</string>
    <string name="follow_election">FOLLOW ELECTION</string>
    <string name="unfollow_election">UNFOLLOW ELECTION</string>
    <string name="voter_info_voting_locations">Voting Locations</string>
    <string name="voting_info_ballout_information">Ballout Information</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="web_icon">Web Icon</string>
    <string name="political_party">Political Party</string>
    <string name="representative_photo">Representative Photo</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="election_date">12 November 2055</string>

    <!-- TODO: Add necessary string values -->

</resources>
