<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools"
    >

    <!-- TODO: Add data binding node -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel"
            />

        <variable
            name="address"
            type="com.example.android.politicalpreparedness.network.models.Address"
            />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_layout_representative"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/scene"
        >

        <TextView
            android:id="@+id/search_title"
            style="@style/ElectionsHeaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/scene_default_dimen"
            android:layout_marginTop="@dimen/scene_default_dimen"
            android:layout_marginEnd="@dimen/scene_default_dimen"
            android:text="@string/representative_search"
            app:layout_constraintTop_toTopOf="parent"
            />

        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress"
            android:text="@{address.line1}"
            app:layout_constraintEnd_toEndOf="@id/search_title"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/search_title"
            />

        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress"
            android:text="@{address.line2}"
            app:layout_constraintEnd_toEndOf="@id/search_title"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/address_line_1"
            />

        <EditText
            android:id="@+id/city"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:text="@{address.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/address_line_2"
            />

        <Spinner
            android:id="@+id/state"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="@dimen/zero_dimension"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            />

        <EditText
            android:id="@+id/zip"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:autofillHints="postalCode"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            android:text="@{address.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/city"
            />

        <Button
            android:id="@+id/button_search"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives_button"
            app:layout_constraintEnd_toEndOf="@id/search_title"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/zip"
            />

        <Button
            android:id="@+id/button_location"
            android:layout_width="@dimen/zero_dimension"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location"
            app:layout_constraintEnd_toEndOf="@id/search_title"
            app:layout_constraintStart_toStartOf="@id/search_title"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            />

        <!-- TODO: Add visual styling and content -->
        <TextView
            style="@style/ElectionsHeaders"
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:text="@string/my_representatives"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location"
            />

        <!-- TODO: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            />
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dimension"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>